# lacuna-metric

./: .gitignore  Outline for Paper for 1st Workshop on Machine Learning for Ancient Languages (ML4AL 2024).md  README.md  alternatives_stats.tsv  corpus_stats.tsv  example.xml  language_stats.tsv  material_stats.tsv  mode_stats.tsv  prompt.txt  pyproject.toml
lacuna_metric/: converter.py  utils.py
paper/: fitzgerald-barney-2024.docx
script/: ab_types.py  app_types.py  convert.py  create_case_stats_db.py  create_stats_db.py  language_material.py  pass_one.py  pass_two.py  stats.py  supplied_types.py  tag_counter.py
tests/: test_converter.py  test_utils.py
