[tool.poetry]
name = "lacuna-metric"
version = "0.1.0"
description = ""
authors = ["Will Fitzgerald <willf@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
lingua-py = "^0.1.1"
lxml = "^5.2.1"
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
isort = "^5.13.2"
coverage = "^7.4.4"
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
